# hmacaroons

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Crypto-Macaroon-Serializer-Base64.html  Crypto-Macaroon-Verifier.html  Crypto-Macaroon.html  LICENSE  Makefile  README.md  benchmark.html  cacheable.nix  ci.nix  default.nix  doc-index.html  hmacaroons.cabal  hmacaroons.haddock  index-frames.html  index.html  mini_Crypto-Macaroon-Serializer-Base64.html  mini_Crypto-Macaroon-Verifier.html  mini_Crypto-Macaroon.html  shell.nix  stack.yaml
.github/workflows/: test.yml
bench/: bench.hs
doc/: notes.md
materialized/: .stack-to-nix.cache  .stack-to-nix.cache.0  default.nix  hmacaroons.nix
nix/: pkgs.nix  shell.nix  sources.json
scripts/: pushdoc.sh
src/Crypto/: Macaroon.hs
src/Crypto/Macaroon/: Binder.hs  Internal.hs  Verifier.hs
src/Crypto/Macaroon/Serializer/: Base64.hs
src/Crypto/Macaroon/Serializer/Binary/: V1.hs  V2.hs
src/Crypto/Macaroon/Verifier/: Internal.hs
test/: Sanity.hs  main.hs  tests.hs
test/Crypto/Macaroon/: Instances.hs  Tests.hs
test/Crypto/Macaroon/Serializer/Base64/: Tests.hs
test/Crypto/Macaroon/Serializer/Binary/V1/: Tests.hs
test/Crypto/Macaroon/Serializer/Binary/V2/: Tests.hs
test/Crypto/Macaroon/Verifier/: Tests.hs
test/Crypto/Macaroon/Verifier/Internal/: Tests.hs
