name:                hmacaroons
version:             0.1.0.0
synopsis:            Haskell implementation of macaroons
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Julien Tanguy
maintainer:          julien.tanguy@jhome.fr
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Crypto.Macaroon,
                       Crypto.Macaroon.Binder
                       Crypto.Macaroon.Serializer.Base64
  other-modules:       Crypto.Macaroon.Internal
  -- other-extensions:    
  build-depends:  base >=4 && < 5,
                  attoparsec >=0.12,
                  bytestring >=0.10,
                  base64-bytestring >= 1.0,
                  byteable >= 0.1 && <0.2,
                  cereal >= 0.4,
                  cryptohash >=0.11 && <0.12,
                  cipher-aes >=0.2 && <0.3,
                  deepseq >= 1.1,
                  hex >= 0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
 
benchmark bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src, bench
  main-is:          bench.hs
  ghc-options:      -O2
  build-depends:  base >= 4 && <5,
                  attoparsec >=0.12,
                  bytestring >=0.10,
                  base64-bytestring >= 1.0,
                  cereal >= 0.4,
                  cryptohash >=0.11 && <0.12,
                  cipher-aes >=0.2 && <0.3,
                  byteable >= 0.1 && <0.2,
                  hex >= 0.1,
                  deepseq >= 1.1,
                  criterion >= 1.1
 
test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: main.hs
  build-depends:  base >= 4 && <5,
                  attoparsec >=0.12,
                  bytestring >=0.10,
                  base64-bytestring >= 1.0,
                  byteable >= 0.1 && <0.2,
                  cereal >= 0.4,
                  cryptohash >=0.11 && <0.12,
                  hex >= 0.1,
                  tasty >= 0.10,
                  tasty-hunit >= 0.9,
                  hmacaroons
